# IoxusTFTPApp

./: .gitignore  README.md  pyproject.toml
scripts/: build_cli_linux.sh  build_exe.bat  build_linux.sh  run_dev.py
src/haven_tftp/: __init__.py  __main__.py  app.py  cli.py  constants.py
src/haven_tftp/core/: __init__.py
src/haven_tftp/core/tftp/: client.py  packets.py  server.py  strategies.py
src/haven_tftp/core/udp/: terminal.py
src/haven_tftp/gui/: boot_monitor.py  dialogs.py  main_window.py  simple_panel.py  tftp_panel.py  tooltips.py  udp_panel.py
src/haven_tftp/utils/: hexview.py  log.py  net.py  threading_utils.py
