[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haven-tftp"
version = "0.1.0"
description = "TFTP and UDP utility with failure simulations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
haven-tftp = "haven_tftp.app:main"

